js/js.translator/testData/incremental/invalidation/eagerInitializationMoveBetweenFiles/lib1/eagerA.0.kt
@OptIn(kotlin.ExperimentalStdlibApi::class)
@EagerInitialization
val marker = run { z1 = true; 1 }
